Revision history for Perl extension Log::Dispatch::FileRotate.

{{$NEXT}}

1.28 Thu Jul 27 2017
    *** Multiple fixes to locking code:
    - flock() can be interrupted by a syscall. work around by using a
      safe_flock() wrapper that retries if errno is EAGAIN (and also
      EWOULDBLOCK).
    - handle several possible race conditions between open() and flock().
    - DESTROY() was unlinking the lockfile (.logfile.LCK).  This was the cause
      of a race condition where multiple processes could enter the critical
      seciton at the same time.  Avoided by leaving .LCK files in place.
      Probably fixes #77075 (Thanks Emanuele Tomasi).
    - add author test for DESTROY lockfile race condition.

1.27 Thu Jul 06 2017
    - add "check_both" configuration option which allows the use of both time and
      size based rotation at the same time.  If either conditions require a
      rotation, a rotation will happen.  Default is false (previous behaviour).
      Thanks Emanuele Tomasi.  PR #6.
    - make signature test an "author" test and make Test::Signature optional

1.26 Tue May 09 2017
    - add SEE ALSO reference to Log::Dispath::File::Stamped (Thanks Karen
      Etheridge)

1.25 Mon Apr 10 2017
    - Fix test failures if the test suite is running as root user.

1.24 Tue Feb 14 2017
    - fix test failure on file-open-failure.t related to current locale
      setting.
    - improve fix to Date::Manip TZ deprecation warnings.

1.23 Thu Feb 09 2017
    - Issue a warning if the lockfile cannot be opened (Thanks KGOESS)
      [#63544]
    - Fix POD typo (Thanks Anirvan Chatterjee)

1.22 Thu Oct 06 2016
    - Fix minor POD error (Thanks Matthias Schmitz) [#47665]
    - Remove Log::Log4perl dependency.  The tests now use Log::Dispatch
      directly instead of going through Log4perl. [#55359]
    - Split out "no activity" test case into its own file
    - Use Dist::Zilla to build the dist
    - Move test.pl to t/basic.t